# netutils

./: .editorconfig  CMakeLists.txt  README.md
src/: main.cpp
src/appinfo/: appinfo.hpp
src/argparserconfig/: argparseconfig.cpp  argparserconfig.hpp
src/checksum/: checksum.cpp  checksum.hpp
src/macaddr/: macaddr.cpp  macaddr.hpp
src/termutils/: termutils.hpp
