cmake_minimum_required(VERSION 4.0.1)

project(netutils VERSION 1.0.0)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

set(CMAKE_CXX_FLAGS_RELEASE "-O3 -DNDEBUG -s")

file(GLOB_RECURSE SOURCE_FILES src/*.cpp src/*.hpp)

add_executable(netutils ${SOURCE_FILES})

target_compile_definitions(${PROJECT_NAME} PRIVATE
				APP_NAME="${PROJECT_NAME}"
				APP_VERSION="${PROJECT_VERSION}"
				APP_VERSION_MAJOR=${PROJECT_VERSION_MAJOR}
				APP_VERSION_MINOR=${PROJECT_VERSION_MINOR}
				APP_VERSION_PATCH=${PROJECT_VERSION_PATCH}
)

target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_SOURCE_DIR}/include)

install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION bin)
